fix(portfolio): fix layout issues on breakpoints

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -436,8 +436,11 @@ html, body { height: 100%; }
 }
 
 @media only screen and (max-width: 700px) {
-	.main-nav li { margin-right: 15px; }
-	.main-nav li a { font-size: 1.438em; }
+	.main-nav ol li {
+      margin-right: 15px;
+
+      a { font-size: 1.438em; }
+    }
 	.tagline { font-size: 1.250em; }
 
 	.rg-bio { background-position: center top; padding-top: 230px;}
@@ -458,7 +461,7 @@ html, body { height: 100%; }
 }
 
 @media only screen and (max-width: 560px) {
-	.main-nav li a { font-size: 1.188em; }
+	.main-nav ol li a { font-size: 1.188em; }
 	.tagline { font-size: 1em; }
 }
 
@@ -471,9 +474,12 @@ html, body { height: 100%; }
     .main-nav {
         height: auto; padding-top: 12px; text-align: center;
 
-        ol { float: none; padding: 0; margin: 15px 0 0; }
-	    li { border-top: #5c5c56 1px solid; float: none; margin-right: 0; padding: 5px 0 5px 0; }
-	    .last { margin-right: 0; }
+        ol {
+          float: none; padding: 0; margin: 15px 0 0;
+
+          li { border-top: #5c5c56 1px solid; float: none; margin-right: 0; padding: 5px 0 5px 0; }
+          .last { margin-right: 0; }
+        }
         .rg-logo img {  width: 85px; height: 85px; }
     }
     .js .main-nav .rg-logo { position: static; width: 100%; height: 40px; display: block; }
